--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vue-iconfont-cli",
-  "version": "2.0.2",
+  "name": "vue-iconfonts-cli",
+  "version": "1.0.0",
   "main": "index.js",
   "keywords": [
     "iconfont",
@@ -19,7 +19,7 @@
     "iconfont-h5": "./commands/createIcon.js"
   },
   "peerDependencies": {
-    "vue": "^2.5.17"
+    "vue": "*"
   },
   "dependencies": {
     "colors": "^1.3.3",
@@ -31,6 +31,7 @@
     "tslib": "^1.10.0"
   },
   "devDependencies": {
+    "@types/http-proxy": "^1.17.7",
     "@types/fs-extra": "^8.0.0",
     "@types/glob": "^7.1.1",
     "@types/lodash": "^4.14.137",
@@ -38,8 +39,8 @@
     "@types/mkdirp": "^0.5.2",
     "@types/node": "^12.7.2",
     "@types/vue": "^2.0.0",
-    "vue": "^16.9.0",
     "ts-node": "^8.3.0",
-    "typescript": "^3.5.3"
+    "typescript": "^3.5.3",
+    "vue": "^2.5.17"
   }
 }
