fix: 修复多颜色

--- a/src/templates/SingleIcon.js.template
+++ b/src/templates/SingleIcon.js.template
@@ -10,7 +10,7 @@ export default {
       default: #size#,
     },
     color: {
-      type: String,
+      type: Object,
       default: "",
     },
     style: {
