--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-iconfonts-cli",
-  "version": "1.0.6",
+  "version": "1.1.0",
   "main": "index.js",
   "keywords": [
     "iconfont",
@@ -10,8 +10,8 @@
     "icons",
     "iconfont.cn"
   ],
-  "repository": "git@github.com:Yorksh1re/vue-iconfont-cli.git",
-  "author": "Yorksh1re <ezreeeeal@gmail.com>",
+  "repository": "git@github.com:Zanel1u/vue-iconfont-cli.git",
+  "author": "Zane liu <hi@zaneliu.me>",
   "license": "MIT",
   "bin": {
     "iconfont": "./commands/help.js",
@@ -22,25 +22,25 @@
     "vue": "*"
   },
   "dependencies": {
-    "colors": "^1.3.3",
-    "glob": "^7.1.4",
-    "iconfont-parser": "^1.0.0",
-    "lodash": "^4.17.15",
-    "minimist": "^1.2.5",
-    "mkdirp": "^0.5.1",
-    "tslib": "^1.10.0"
+    "colors": "1.3.3",
+    "glob": "7.1.4",
+    "iconfont-parser": "1.0.0",
+    "lodash": "4.17.15",
+    "minimist": "1.2.5",
+    "mkdirp": "0.5.1",
+    "tslib": "1.10.0"
   },
   "devDependencies": {
     "@types/http-proxy": "^1.17.7",
-    "@types/fs-extra": "^8.0.0",
-    "@types/glob": "^7.1.1",
-    "@types/lodash": "^4.14.137",
-    "@types/minimist": "^1.2.0",
-    "@types/mkdirp": "^0.5.2",
-    "@types/node": "^12.7.2",
-    "@types/vue": "^2.0.0",
-    "ts-node": "^8.3.0",
-    "typescript": "^3.5.3",
-    "vue": "^2.5.17"
+    "@types/fs-extra": "8.0.0",
+    "@types/glob": "7.1.1",
+    "@types/lodash": "4.14.137",
+    "@types/minimist": "1.2.0",
+    "@types/mkdirp": "0.5.2",
+    "@types/node": "12.7.2",
+    "@types/vue": "2.0.0",
+    "ts-node": "8.3.0",
+    "typescript": "3.5.3",
+    "vue": "2.5.17"
   }
 }
