--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "jsx": "react",
     "importHelpers": true,
     "downlevelIteration": true,
+    "skipLibCheck": true,
     "strict": true,
     "noImplicitAny": false,
     "strictNullChecks": true,
@@ -28,5 +29,5 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "resolveJsonModule": true
-  }
+  },
 }
