--- a/src/templates/Icon.js.template
+++ b/src/templates/Icon.js.template
@@ -21,7 +21,7 @@ export default {
       default: "",
     },
     style: {
-      type: String,
+      type: [String, Object],
       default: "display: block;",
     },
   },
